--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "express start"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "Marlon Silva",
